experiment/templates/meerschaum_template.yaml
---
# Source: meerschaum/templates/mrsm-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meerschaum
  labels:
    helm.sh/chart: meerschaum-0.2.0
    app.kubernetes.io/name: meerschaum
    app.kubernetes.io/instance: meerschaum
    app.kubernetes.io/version: "2.8.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: meerschaum
    app.kubernetes.io/instance: meerschaum
---
# Source: meerschaum/templates/mrsm-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meerschaum
  labels:
    helm.sh/chart: meerschaum-0.2.0
    app.kubernetes.io/name: meerschaum
    app.kubernetes.io/instance: meerschaum
    app.kubernetes.io/version: "2.8.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: meerschaum
      app.kubernetes.io/instance: meerschaum
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meerschaum
        app.kubernetes.io/instance: meerschaum
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - args:
          - "start"
          - "api"
          - "--production"
          - "--port"
          - "8000"
          image: bmeares/meerschaum:2.8.4
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
              httpHeaders:
                - name: Host
                  value: "127.0.0.1"
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
              httpHeaders:
                - name: Host
                  value: "127.0.0.1"
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 6
          name: meerschaum
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /meerschaum
              name: meerschaum-data
          securityContext:
            allowPrivilegeEscalation: false
      restartPolicy: Always
      volumes:
        - name: meerschaum-data
          persistentVolumeClaim:
            claimName: meerschaum
status: {}
---
# Source: meerschaum/templates/mrsm-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meerschaum
  labels:
    helm.sh/chart: meerschaum-0.2.0
    app.kubernetes.io/name: meerschaum
    app.kubernetes.io/instance: meerschaum
    app.kubernetes.io/version: "2.8.4"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "localhost"
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meerschaum
                port:
                  number: 8000
